--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,8 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "exec-series": "^1.0.3",
+    "executive": "^1.1.7",
     "express": "~4.13.4",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
