--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "d3-and-express",
-  "version": "0.0.0",
+  "name": "gitguard-server",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,9 +13,13 @@
     "exec-series": "^1.0.3",
     "executive": "^1.1.7",
     "express": "~4.13.4",
+    "fast64": "^0.5.0",
     "jade": "~1.11.0",
+    "js-base64": "^2.1.9",
+    "jsesc": "^2.2.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
+    "text-encoding": "^0.6.1",
     "valid-url": "^1.0.9"
   }
 }
